client/signup/steps/domains/style.scss
@import "@wordpress/base-styles/breakpoints";
@import "@wordpress/base-styles/mixins";
@import "@wordpress/base-styles/variables";

.domains__step-section-wrapper {
	margin: 0 auto;
	width: 100%;
}

.signup__step.is-domains {
	.action-buttons.step-wrapper__navigation {
		@media ( max-width: $break-mobile ) {
			display: none;
		}
	}
}

.is-section-signup .domains__step-content {
	margin-bottom: 50px;

	& .use-my-domain__page-heading {
		padding-left: 24px;
		padding-right: 24px;
		text-align: center;
	}

	& .use-my-domain,
	& .connect-domain-step,
	& .domain-transfer-or-connect__content {
		background: transparent;
		box-shadow: none;

		@include break-mobile {
			padding-left: 0;
			padding-right: 0;
		}
	}

	&.domains__step-content-domain-step {
		margin-bottom: 20px;
	}

	.search-component .search-component__icon-navigation {
		background: none;
	}

	.register-domain-step__search-card {
		border-radius: 2px;
		@include elevation( 2dp );
	}

	.search-component.is-open.has-focus {
		border: none;
		border-radius: 2px;
		box-shadow: 0 0 0 3px var(--color-accent-light);
	}

	.search-filters__dropdown-filters {
		border-radius: 0 2px 2px 0;
	}

	.search-filters__dropdown-filters.search-filters__dropdown-filters--is-open {
		box-shadow: 0 0 0 3px var(--color-accent-light);
	}

	@include breakpoint-deprecated( "<660px" ) {
		.register-domain-step__search-card,
		.search-component.is-open.has-focus {
			border-radius: 0;
		}
	}


	.domains__domain-cart-foldable-card {
		position: fixed;
		width: 100%;
		max-height: 75%;
		bottom: 0;
		left: 0;
		z-index: 99;
		padding-bottom: 6px !important;
		box-shadow: 0 -3px 10px 0 rgba(0, 0, 0, 0.12);

		.foldable-card__main {
			max-width: 100%;
			display: block;
			width: 100%;
			margin: 0;

			.foldable-card__action {
				right: auto;
				left: 0;
			}
			.domains__domain-cart-title {
				margin-left: 24px;
				display: flex;
				align-items: center;
				justify-content: space-between;
			}

			.domains__domain-cart-total {
				display: flex;
				gap: 8px;
				align-items: center;

				.domains__domain-cart-total-items {
					font-family: "SF Pro Display", $sans;
					font-size: $font-body-extra-small;
					font-weight: 400;
					line-height: 20px;
					letter-spacing: 0;
					text-align: left;
				}
				.domains__domain-cart-total-price {
					font-family: "SF Pro Display", $sans;
					font-size: $font-body;
					font-weight: 500;
					line-height: 24px;
					letter-spacing: -0.32px;
					text-align: left;

				}
			}
		}
		.foldable-card__content {
			border-top: 0;
			padding: 0 16px;
			overflow-y: auto;
			.domains__domain-cart {
				border-top: 1px solid var(--color-neutral-5);
			}
			.domains__domain-cart-rows {
				padding-top: 6px;
			}
		}
	}

	.domains__domain-cart {
		border-bottom: 0 !important;

		.domains__domain-cart-title {
			font-size: $font-body;
			color: var(--studio-gray-90);
			margin-bottom: 10px;
		}

		.domains__domain-cart-rows {
			.domains__domain-cart-row {
				padding-bottom: 6px;
				padding-top: 6px;
			}

			.domains__domain-cart-row > div {
				display: flex;
				justify-content: space-between;
			}

			.savings-message {
				color: var(--studio-green);
				display: flex;
				align-items: center;
				font-size: 0.875rem;
			}

			.domains__domain-cart-domain {
				display: flex;
				align-items: center;
				color: var(--studio-gray-50);
				font-size: $font-body-small;

				span {
					overflow: hidden;
					white-space: nowrap;
					text-overflow: ellipsis;
				}

				&.limit-width {
					width: 45%;
				}
			}

			.domains__domain-cart-remove {
				color: var(--studio-gray-50);
				font-size: $font-body-extra-small;
			}

			.domain-product-price__price {
				display: flex;
				align-items: center;
				font-size: 0.875rem;

				del {
					font-size: 0.75rem;
					margin-right: 5px;
				}
			}
		}

		.domains__domain-cart-total {
			border-top: 1px solid;
			border-top-color: var(--studio-gray-5);
			padding-top: 10px;
			margin-bottom: 10px;
			margin-top: 12px;
			color: var(--studio-gray-60);
			font-size: $font-body-small;
		}

		.domains__domain-cart-continue {
			width: 100%;
			height: 40px;
			padding-left: 24px;
			padding-right: 24px;
			border-radius: 4px;
		}

		.domains__domain-cart-choose-later {
			width: 100%;
			height: 40px;
			color: var(--studio-gray-100);
			text-decoration: underline;
		}
	}
}

/**
 * Styles for design reskin
 * The `is-white-signup` class is attached to the body when the user is assigned the `reskinned` group of the `reskinSignupFlow` a/b test
 */
body.is-section-signup.is-white-signup {
	$light-white: #f3f4f5;

	.domains__step-content {
		display: flex;

		.search-component.is-open {
			border: 1px solid #a7aaad;
			border-radius: 4px;
			height: 48px;
		}

		.search-component.is-open.has-focus {
			border-color: #646970;
			background: var(--color-surface);
			box-shadow: none;

			.search-component__input {
				background: var(--color-surface);
			}
		}

		.domains__domain-side-content-container {
			flex-direction: column;
			margin-top: 40px;
			display: none;

			@include break-large {
				width: 30vw;
				margin-top: 0;
				flex-direction: column;
				display: flex;
			}

			@include break-wide {
				width: 350px;
			}
		}

		.register-domain-step .domains__domain-side-content-container {
			display: flex;

			@include break-small {
				flex-direction: row;

				.domains__domain-side-content {
					padding-top: 0;
					border-bottom: none;
				}
			}

			@include break-large {
				display: none;
			}
		}

		.domains__free-domain .reskin-side-explainer__subtitle-2 {
			display: none;

			@include break-small {
				display: block;
			}
		}

		.domains__domain-side-content {
			border-bottom: 1px solid;
			border-bottom-color: var(--studio-gray-5);
			padding: 20px 0;
			margin: 0;

			@include break-small {
				margin: 0 20px;
			}

			@include break-large {
				margin: 0 20px 0 40px;
				padding: 40px 0;
			}

			@include break-wide {
				margin: 0 0 0 80px;
			}

			&.fade-out {
				opacity: 0;
				visibility: hidden;
				transition: all 0.4s ease-out;
			}
		}

		.domains__domain-side-content:first-of-type {
			padding-top: 0;
		}

		.domains__domain-side-content:last-of-type {
			border-bottom: none;
		}

		.register-domain-step {
			flex: 1;
		}

		.register-domain-step__search-card {
			background: var(--color-surface);
			box-shadow: none;
			margin: 20px 0 0;

			@include break-small {
				margin: 20px 20px 0;
			}

			@include break-large {
				margin: 0;
			}

			@include break-wide {
				margin: initial;
			}
		}
		.search-component__input {
			border-radius: 4px;

			&::placeholder {
				color: var(--color-neutral-50);
			}
		}
		.search-component.is-open .search-component__input-fade.ltr::before {
			display: none;
		}
		.search-component__open-icon {
			transform: scaleX(-1);
		}

		.search-component__icon-navigation.components-button:focus:not(:disabled) {
			box-shadow: 0 0 0 1px var(--color-primary);
		}

		.search-component__icon-search {
			fill: #a7aaad;
			margin: 8px 6px 8px 8px;
		}

		.search-component .search-component__icon-navigation {
			padding: 0 7px;
		}

		.use-my-domain__page-heading {
			text-align: left;
		}
	}

	.search-filters__dropdown-filters {
		height: 48px;

		&.search-filters__dropdown-filters--is-open {
			box-shadow: none;
		}

		.button {
			&:hover,
			&:focus {
				box-shadow: none;
			}

			.search-filters__dropdown-filters-button-text {
				color: var(--color-neutral-60);
			}
		}
	}

	.search-filters__popover {
		$accent-blue: #117ac9;
		.button.is-primary {
			background: $accent-blue;
			border-color: $accent-blue;
		}
	}
	.signup__step.is-domain-only,
	.signup__step.is-domains,
	.signup__step.is-mailbox-domain {
		padding: 0 20px;
	}
}

// blue signup flow-specific styles
body.is-section-signup:not(.is-white-signup) {

	.domains__step-content {

		a {
			text-decoration: underline;
			color: var(--color-text-inverted);
		}

		.domain-transfer-or-connect {

			&__content {

				.option-content {

					&__illustration,
					&__main,
					&__action,
					&__header,
					&__top-text,
					&__pricing-text {
						color: var(--color-text-inverted);
					}

					&__benefits-item-text,
					&__pricing-cost {
						filter: brightness(0.9);
					}

					&__benefits-item .gridicon {
						fill: var(--studio-green-20);
					}

					& + .option-content {
						border-color: var(--studio-gray-40);
					}

				}

			}

			&__support-link {
				color: var(--color-text-inverted);
				filter: brightness(0.9);
			}

		}

		.use-my-domain {

			.form-input-validation.is-error {
				color: var(--color-error-30);
			}

		}

	}

}

